feat(CustomOptionTemplate): Expose options

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,22 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 html,
 body,
-#__nuxt,
-#__layout,
 #app {
-  font: 400 16px Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font: 400 16px -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   line-height: 1.5;
   font-kerning: normal;
   max-height: 100vh;
   min-height: 100vh;
-  color: #000;
+  color: black;
   margin: 0;
 }
 
